<resources>
    <string name="app_name">PokemonExample</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    //add
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="Registrarse">
        <u>¿No tienes cuenta?, registrate aquí</u>
    </string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="have_acount"><u>Ya tienes cuenta inicia sesión aquí</u></string>
    <string name="registrarse">Registarse</string>
    <string name="pokedex">Pokedex</string>
    <string name="buscar">Buscar</string>



</resources>